--- a/src/main/resources/static/css/createUserStyle.css
+++ b/src/main/resources/static/css/createUserStyle.css
@@ -4,7 +4,7 @@ table{
 }
 
 input[type=text]{
-    font-size: 13px;
+    font-size: 14px;
 }
 
 th, td {
@@ -12,9 +12,9 @@ th, td {
     padding: 10px;
 }
 
-
-select{
+select {
     font-size: 13pt;
+    text-align-last: center;
 }
 
 .createUserForm{
@@ -26,7 +26,7 @@ button:hover{
     opacity: 0.7;
 }
 
-#createUserEnd {
+#createUserEnd, #updateStatusSubmit {
     background-color: #003087;
     width: 50%;
     color: white;
@@ -42,5 +42,5 @@ button:hover{
     border: none;
     cursor: pointer;
     margin: 3px;
-    padding: 5px;
+    padding: 7px;
 }
