add thumbnail on index.html and alert default password on login.html and add process table on studentPage

--- a/src/main/resources/static/css/mainStyle.css
+++ b/src/main/resources/static/css/mainStyle.css
@@ -89,6 +89,12 @@ span {
   vertical-align: middle;
 }
 
+a:link, a:visited, a:hover, a:active{
+  text-decoration: none;
+}
+
+
+
 @media screen and (min-width: 1200px) {
   .leftsideblank, .rightsideblank {
     width: 15%;
