--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -21,7 +21,7 @@
                 </form>
             </li>
             <li>
-                <a href="http://it.sookmyung.ac.kr/it/index.do"><span> 학과사이트 </span></a>
+                <a href="http://it.sookmyung.ac.kr/it/index.do" target="_blank"><span> 학과사이트 </span></a>
             </li>
         </ul>
     </div>
