--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -25,6 +25,8 @@
                     <input type="text" name="username" required>
                     <p>비밀번호</p>
                     <input type="password" name="password" required>
+                    <p style="font-size: 10pt; color: darkred"> * 회원가입이 아닌 일괄추가된 경우 초기비밀번호는 p+학번+! 입니다 </p>
+                    <p style="font-size: 10pt; color: darkred"> ex) p11111! </p>
                     <button type="submit">로그인</button>
                 </form>
             </div>
