--- a/src/main/resources/static/css/projectListStyle.css
+++ b/src/main/resources/static/css/projectListStyle.css
@@ -100,6 +100,10 @@ td.selected {
   text-align: right;
 }
 
-.langlist{
+.langlist {
   display: inline-block;
+}
+
+.forPage {
+  color: black;
 }
