--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -3,7 +3,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <header th:fragment="headerFragment">
-    <img src="/character.jpg" alt="logo" width="200" height="240" align="middle">
+    <a href="/">
+        <img src="/character.jpg" alt="logo" width="200" height="240" align="middle">
+    </a>
     <!-- Home, Login, 학과사이트 -->
     <div class="link">
         <ul>
