fix thumbnail width and studentPage style

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,9 @@
         h1, h3{
             text-align: center;
         }
+        img{
+            max-width: 100%;
+        }
     </style>
 </th:block>
 
