--- a/src/main/resources/templates/studentPage.html
+++ b/src/main/resources/templates/studentPage.html
@@ -3,6 +3,7 @@
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
       layout:decorator="layout/default">
 
+<!-- index.html 고유 CSS 추가 -->
 <th:block layout:fragment="css">
     <style>
         #table_list{
@@ -10,12 +11,27 @@
             font-size: 11pt;
             text-align: left;
             border-color: #6d788a;
-            margin-left: auto;
-            margin-right: auto;
         }
-        th, td {
-            text-align: center;
+        th, td{
             padding: 10px;
+        }
+        @media screen and (min-width: 1200px) {
+            .leftsideblank, .rightsideblank {
+                width: 12.5%;
+                height:100vh;
+            }
+        }
+
+        @media screen and (max-width: 1200px){
+
+            .leftsideblank, .rightsideblank {
+                width: 12.5%;
+                height: 100vh;
+            }
+
+        }
+        h1{
+            margin-top: 8%;
         }
     </style>
 </th:block>
@@ -34,18 +50,12 @@
             <h1>✔ 마이페이지</h1>
             <h3><span id="user_name" sec:authentication="name" style="color: #003087"></span>님의 회원정보</h3>
 
-            <table>
-                <tr><td>학번</td><td><span th:text="${studentIdNum}" style="color: black;"></span></td></tr>
-                <tr><td>제 1전공</td><td><span th:text="${usermajor1}" style="color: black;"></span></td></tr>
-                <tr><td>제 2전공</td><td><span th:text="${usermajor2}" style="color: black;"></span></td></tr>
+            <p>학번: <span th:text="${studentIdNum}" style="color: black;"></span></p>
+            <p>제 1전공: <span th:text="${usermajor1}" style="color: black;"></span></p>
+            <p>제 2 전공: <span th:text="${usermajor2}" style="color: black;"></span></p>
 
-
-                <tr><td><a href="#" onclick="window.open('/changePW', 'changePW', 'width=500 height= 500'); return false">비밀번호 변경</a></td>
-                    <td><a href="#" onclick="window.open('/changeEmail', 'changeEmail', 'width=500 height= 500'); return false">이메일 변경</a></td></tr>
-            </table>
-
-            <br><br><br>
-            <h3 style="text-align: center;">졸업프로젝트 심사 과정 결과</h3>
+            <br><br>
+            <p>졸업프로젝트 심사 과정 결과</p>
             <table id="table_list">
                 <tr>
                     <th scope="col" style="text-align: center">연도</th>
@@ -58,36 +68,40 @@
                     <th scope="col" style="text-align: center">최종</th>
                     <th scope="col" style="text-align: center">사유</th>
                 </tr>
-                <tr class="text-center" th:if="${teamStatus} != null" th:each="team : ${teamStatus}" style="border-top: 2px solid">
+                <tr class="text-center" th:each="team : ${teamStatus}">
                     <td>
-                        <p th:text="${team?.teamYear}"></p>
+                        <p th:text="${team.teamYear}"></p>
                     </td>
                     <td>
-                        <p th:text="${team?.teamSemester}"></p>
+                        <p th:text="${team.teamSemester}"></p>
                     </td>
                     <td>
-                        <p th:text="${team?.teamName}"></p>
+                        <p th:text="${team.teamName}"></p>
                     </td>
                     <td>
-                        <p th:text="${team?.teamStatus1}"></p>
+                        <p th:text="${team.teamStatus1}"></p>
                     </td>
                     <td>
-                        <p th:text="${team?.teamStatus2}"></p>
+                        <p th:text="${team.teamStatus2}"></p>
                     </td>
                     <td>
-                        <p th:text="${team?.teamStatus3}"></p>
+                        <p th:text="${team.teamStatus3}"></p>
                     </td>
                     <td>
-                        <p th:text="${team?.teamStatus4}"></p>
+                        <p th:text="${team.teamStatus4}"></p>
                     </td>
                     <td>
-                        <p th:text="${team?.finalStatus}"></p>
+                        <p th:text="${team.finalStatus}"></p>
                     </td>
                     <td>
-                        <p th:text="${team?.finalStatusReason}"></p>
+                        <p th:text="${team.finalStatusReason}"></p>
                     </td>
                 </tr>
             </table>
+
+            <a href="#" onclick="window.open('/changePW', 'changePW', 'width=500 height= 500'); return false">비밀번호 변경</a>
+            <br>
+            <a href="#" onclick="window.open('/changeEmail', 'changeEmail', 'width=500 height= 500'); return false">이메일 변경</a>
         </article>
     </section>
 
