--- a/ttreeGradle/src/main/resources/static/css/LoginStyle.css
+++ b/ttreeGradle/src/main/resources/static/css/LoginStyle.css
@@ -7,21 +7,16 @@
 
 h1 {
   margin-top: 8%;
+  margin-left: 25%;
   padding-bottom: 80px;
   font-size: 20pt;
 }
 
-.leftsideblank {
-  float: left;
-}
-
-.rightsideblank {
-  float: right;
-}
-
 button {/* 로그인 버튼 */
   background-color: #003087;
-  width: 50%;
+  font-size: 20px;
+  font-weight: bold;
+  width: 35%;
   color: white;
   padding: 15px;
   margin: 10px 0px;
@@ -30,7 +25,7 @@ button {/* 로그인 버튼 */
 }
 
 input[type=text]{
-  width: 50%;
+  width: 30%;
   margin: 8px 0;
   padding: 12px 20px;
   display: inline-block;
@@ -39,7 +34,7 @@ input[type=text]{
 }
 
 input[type=password] {
-  width: 50%;
+  width: 30%;
   margin: 8px 0;
   padding: 12px 20px;
   display: inline-block;
@@ -67,11 +62,4 @@ button:hover {
   text-align: center;
 }
 
-
-@media screen and (min-width: 1200px) {
-  .leftsideblank, .rightsideblank {
-    width: 12.5%;
-    height: 100vh;
-  }
-}
 
