--- a/ttreeGradle/src/main/resources/templates/projectEdit.html
+++ b/ttreeGradle/src/main/resources/templates/projectEdit.html
@@ -182,7 +182,7 @@
                         } else if(langListArray[i] == "Java") {
                             $("input:checkbox[id='java']").prop("checked", true);
                             count++;
-                        } else if(langListArray[i] == "NodeJs") {
+                        } else if(langListArray[i] == "NodeJS") {
                             $("input:checkbox[id='nodejs']").prop("checked", true);
                             count++;
                         } else if(langListArray[i] == "Python") {
