--- a/ttreeGradle/src/main/resources/templates/adminPage.html
+++ b/ttreeGradle/src/main/resources/templates/adminPage.html
@@ -44,7 +44,7 @@
 <div layout:fragment="content">
     <section>
         <aside class="leftsideblank">
-            <div th:replace="/fragments/sidebar.html :: sidebarFragment">
+            <div th:replace="fragments/sidebar.html :: sidebarFragment">
             </div>
         </aside>
 
