fix authorities and fix style

--- a/ttreeGradle/src/main/resources/templates/changePW.html
+++ b/ttreeGradle/src/main/resources/templates/changePW.html
@@ -48,7 +48,11 @@
     <br>
     <div class="PW">
         <p>새로운 비밀번호 입력:</p>
-        <input type="password" id="" value="" name="pass"
+        <input type="password" id="newPW" value="" name="pass"
+               required minlength="6" maxlength="10">
+
+        <p>비밀번호 확인:</p>
+        <input type="password" id="newPW_check" value="" name="pass"
                required minlength="6" maxlength="10">
     </div>
     <br>
