--- a/ttreeGradle/src/main/resources/templates/projectList.html
+++ b/ttreeGradle/src/main/resources/templates/projectList.html
@@ -48,8 +48,10 @@
                     <td><label><input class="language_select" name="language_select" type="checkbox" value="etc">기타</label></td>
                 </tr>
             </table>
-
+            <br>
+            <div style="text-align: center;">
             <input id="searchButton" class="btn btn-primary" type="submit" role="button" value="검색" onclick="pressed()">
+            </div>
             </form>
             <script type="text/javascript">
                 var $table = document.querySelector('.year');
