Fix security configuration and change search button style and add new passowordCheck box  and fix signupinfo to check conditions before submit form

--- a/ttreeGradle/src/main/resources/static/css/projectListStyle.css
+++ b/ttreeGradle/src/main/resources/static/css/projectListStyle.css
@@ -107,3 +107,19 @@ td.selected {
 .forPage {
   color: black;
 }
+
+#searchButton{
+  background-color: #003087;
+  font-size: 20px;
+  font-weight: bold;
+  width: 10%;
+  color: white;
+  padding: 10px;
+  margin: 10px 0px;
+  border: none;
+  cursor: pointer;
+}
+
+#searchButton:hover {
+  opacity: 0.7;
+}
