--- a/ttreeGradle/src/main/resources/templates/SignupInfo.html
+++ b/ttreeGradle/src/main/resources/templates/SignupInfo.html
@@ -9,34 +9,6 @@
 
 <!-- 해당페이지 고유 스크립트 추가 -->
 <th:block layout:fragment="script">
-    <script>
-        function check_pw() {
-            var pw = document.getElementById('pw').value;
-            var SC = ["!", "@", "$", "&", "*"];
-            var check_SC = 0;
-
-            for (var i = 0; i < SC.length; i++) {
-                if (pw.indexOf(SC[i]) != -1) {
-                    check_SC = 1;
-                }
-            }
-
-            if (check_SC == 0) {
-                window.alert("!, @, $, &, * 를 포함하여 비밀번호를 입력하여주세요!")
-                document.getElementById('pw').value = '';
-            }
-
-            if (document.getElementById('pw').value != '' && document.getElementById('pwCheck').value != '') {
-                if (document.getElementById('pw').value == document.getElementById('pwCheck').value) {
-                    document.getElementById('check').innerHTML = '입력하신 비밀번호가 일치합니다.'
-                    document.getElementById('check').style.color = 'blue';
-                } else {
-                    document.getElementById('check').innerHTML = '입력하신 비밀번호가 일치하지 않습니다.'
-                    document.getElementById('check').style.color = 'red';
-                }
-            }
-        }
-    </script>
 </th:block>
 
 <div layout:fragment="content">
@@ -53,12 +25,16 @@
                     <tr>
                         <form action="/signup/info/idCheck" method="post">
                             <td>학번(ID)</td>
-                            <td><input type="text" id="studentIdNum" name="studentIdNum" th:value="${id}" required></td>
+                            <td>
+                                <input type="text" id="studentIdNum" name="studentIdNum" th:value="${id}"
+                                       oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');"
+                                       required>
+                            </td>
                             <td>학번 중복 확인 여부: [[${boolStatus}]]</td>
                             <td><input type="submit" name="IDcheck" value="중복확인"></td>
                         </form>
                     </tr>
-                    <form action="/signup/info" enctype="multipart/form-data" method="post">
+                    <form action="/signup/info" enctype="multipart/form-data" method="post" onsubmit="return checkConditions();">
                         <tr>
                             <td>이름</td>
                             <td><input type="text" name="name" id="name" required></td>
@@ -91,14 +67,15 @@
                             <td>숙명포털 인증</td>
                             <td>
                                 <input type="file" name="authImg" value="authImg" required>
-                                <p style="color: red; font-size: 10pt; margin-bottom: -2px; margin-top: 5px;">* 학사 > 학적정보 > 학적 기본사항관리 > 전공선택/전과내역 선택 후 캡쳐해주세요</p>
+                                <p style="color: red; font-size: 10pt; margin-bottom: -2px; margin-top: 5px;">* 학사 >
+                                    학적정보 > 학적 기본사항관리 > 전공선택/전과내역 선택 후 캡쳐해주세요</p>
                                 <p style="color: red; font-size: 10pt;">* 파일 이름은 학번_이름 형식으로 해주세요</p>
                             </td>
                         </tr>
                         <tr>
                             <td></td>
                             <td>
-                                <button type="submit" name="SignupEnd" onclick="alertMessage()">작성 완료</button>
+                                <button type="submit" name="SignupEnd" onclick="buttonCheck()">작성 완료</button>
                             </td>
                         </tr>
 
@@ -109,31 +86,73 @@
             <br><br><br>
 
             <script>
+                let check_password;
+                let check_studentIDNum;
+
                 if ("[[${id_status}]]" === "NULL_ID") {
+                    check_studentIDNum = false;
                     window.alert("학번을 입력하세요.");
                 } else if ("[[${id_status}]]" === "SAME_ID") {
+                    check_studentIDNum = false;
                     window.alert("가입 이력이 있는 회원입니다.");
                 } else if ("[[${id_status}]]" === "INVALID_ID") {
+                    check_studentIDNum = false;
                     window.alert("학번이 유효하지 않습니다.");
+                } else {
+                    check_studentIDNum = true;
                 }
 
-                if([[${boolStatus}]]){
+                if ([[${boolStatus}]]) {
                     $("#studentIdNum").attr("disabled", true);
                 }
 
+                function check_pw() {
+                    var pw = document.getElementById('pw').value;
+                    var SC = ["!", "@", "$", "&", "*"];
+                    var check_SC = 0;
 
-                function alertMessage(isFilled) {
-                    $('input').filter('[required]').each(function () {
-                        if ($(this).val() == "") {
-                            isFilled = false;
-                        } else {
-                            isFilled = true;
+                    for (var i = 0; i < SC.length; i++) {
+                        if (pw.indexOf(SC[i]) != -1) {
+                            check_SC = 1;
                         }
-                    })
-                    if (isFilled) {
-                        window.alert("회원가입이 완료되었습니다")
+                    }
+
+                    if (check_SC == 0) {
+                        window.alert("!, @, $, &, * 를 포함하여 비밀번호를 입력하여주세요!")
+                        check_password = false;
+                        document.getElementById('pw').value = '';
+                    }
+
+                    if (document.getElementById('pw').value != '' && document.getElementById('pwCheck').value != '') {
+                        if (document.getElementById('pw').value == document.getElementById('pwCheck').value) {
+                            document.getElementById('check').innerHTML = '입력하신 비밀번호가 일치합니다.'
+                            document.getElementById('check').style.color = 'blue';
+                            check_password = true;
+                        } else {
+                            document.getElementById('check').innerHTML = '입력하신 비밀번호가 일치하지 않습니다.'
+                            document.getElementById('check').style.color = 'red';
+                            check_password = false;
+                        }
+                    }
+                }
+
+                function checkConditions(){
+                    if (check_password && check_studentIDNum){
+                        return true;
                     } else {
-                        window.alert("필수 창을 모두 입력하여주세요.")
+                        return false;
+                    }
+                }
+
+                function buttonCheck(){
+                    if (check_password && check_studentIDNum){
+                        window.alert("회원가입에 성공하셨습니다");
+                    } else if(!check_password){
+                        window.alert("비밀번호 일치여부를 확인해주세요!" + check_password);
+                    } else if(!check_studentIDNum) {
+                        window.alert("학번확인을 눌러주세요!" + check_studentIDNum);
+                    } else {
+                        window.alert("빠진 부분이 없는지 확인해주세요!");
                     }
                 }
 
