--- a/ttreeGradle/src/main/resources/templates/projectList.html
+++ b/ttreeGradle/src/main/resources/templates/projectList.html
@@ -50,7 +50,7 @@
             </table>
             <br>
             <div style="text-align: center;">
-            <input id="searchButton" class="btn btn-primary" type="submit" role="button" value="검색" onclick="pressed()">
+                <button id="searchButton" type="submit" onclick="pressed()">검색 </button>
             </div>
             </form>
             <script type="text/javascript">
