--- a/ttreeGradle/src/main/resources/templates/changePW.html
+++ b/ttreeGradle/src/main/resources/templates/changePW.html
@@ -36,6 +36,19 @@
             opacity: 0.7;
         }
     </style>
+    <script>
+        function check_pw(){
+            if (document.getElementById('newPW').value != '' && document.getElementById('newPW_check').value != '') {
+                if (document.getElementById('newPW').value == document.getElementById('newPW_check').value) {
+                    document.getElementById('check').innerHTML = '입력하신 비밀번호가 일치합니다.'
+                    document.getElementById('check').style.color = 'blue';
+                } else {
+                    document.getElementById('check').innerHTML = '입력하신 비밀번호가 일치하지 않습니다.'
+                    document.getElementById('check').style.color = 'red';
+                }
+            }
+        }
+    </script>
 </head>
 <body>
 <form role="form" action="/changePW" id="changePW" method="POST">
@@ -49,13 +62,14 @@
     <div class="PW">
         <p>새로운 비밀번호 입력:</p>
         <input type="password" id="newPW" value="" name="pass"
-               required minlength="6" maxlength="10">
+               required minlength="6" maxlength="10" onchange="check_pw()">
 
         <p>비밀번호 확인:</p>
         <input type="password" id="newPW_check" value="" name="pass"
-               required minlength="6" maxlength="10">
+               required minlength="6" maxlength="10" onchange="check_pw()">
+        <br> <span id="check"></span>
     </div>
-    <br>
+    <br> </td>
     <div class="buttonWrapper">
         <button type="submit" id="changePWButton" name="changePW">
             비밀번호 변경하기
